@@ -7,7 +7,7 @@
 	<File sha1="2fb719ed2a9648b2dd13a137f650b3c0e48705fa" name="Launch.lua" part="program"/>
 	<File sha1="72b9bea1871e94a643e4471fd84bbedbc7810336" name="UpdateCheck.lua" part="program"/>
 	<File sha1="4f17937f2b37784e169a3792b235f2a0a3961e61" name="UpdateApply.lua" part="program"/>
-	<File sha1="125d41380b8ade6a3a4f331ad787946f3bd280c5" name="changelog.txt" part="program"/>
+	<File sha1="1c3622e79965351c367e7dce42525a2b987771f3" name="changelog.txt" part="program"/>
 	<File sha1="3ff73a3c46cb7bd8a53c9d47a893dd2b4c5c60ab" name="Classes/BuildListControl.lua" part="program"/>
 	<File sha1="dc2ffb55b4aae04b86886b25bbf219a301b21340" name="Classes/ButtonControl.lua" part="program"/>
 	<File sha1="9391d403c4ad8e59fd02fba76158acb4159e0562" name="Classes/CalcBreakdownControl.lua" part="program"/>
@@ -21,12 +21,12 @@
 	<File sha1="4fadcbb94abdd8793c8041fab9269e0f41ebc73a" name="Classes/EditControl.lua" part="program"/>
 	<File sha1="f3de897d524a19b7838ada898aae9af23d12cd21" name="Classes/GemSelectControl.lua" part="program"/>
 	<File sha1="3f9330cb27c65546c644195b53bff07ef841858e" name="Classes/ImportTab.lua" part="program"/>
-	<File sha1="9967648bc98f10803eef3862781acd68d0364af8" name="Classes/ItemDBControl.lua" part="program"/>
-	<File sha1="2620eaacffba09ed80c2c41142e9e052eeef4207" name="Classes/ItemListControl.lua" part="program"/>
+	<File sha1="768c24f30a79f93b19d13f61668c5e30417989e9" name="Classes/ItemDBControl.lua" part="program"/>
+	<File sha1="4e5dcefb01c6eb6567d97cfd01cb1435b4cfba0f" name="Classes/ItemListControl.lua" part="program"/>
 	<File sha1="b7c3df4a3b9cdd19efac5d92273aa72d409fa833" name="Classes/ItemSlotControl.lua" part="program"/>
-	<File sha1="05f693476b683a8e021d07a73a0cfa6edd992df5" name="Classes/ItemsTab.lua" part="program"/>
+	<File sha1="0a5a16dc26e64004a30a888e56c259009a541bff" name="Classes/ItemsTab.lua" part="program"/>
 	<File sha1="62138c7db82d57d638a16610a26acd0de75d3486" name="Classes/LabelControl.lua" part="program"/>
-	<File sha1="1316547bcb3af0866aa9c58eb39b38c1965ef23d" name="Classes/ListControl.lua" part="program"/>
+	<File sha1="015e7f6092cd978399956bd05d545fe45bca81d6" name="Classes/ListControl.lua" part="program"/>
 	<File sha1="75c943489d007c34793f6568c28cee2bc1843e75" name="Classes/MinionListControl.lua" part="program"/>
 	<File sha1="ed86df273035636fea3589ad48f9bcc18aba5346" name="Classes/ModDB.lua" part="program"/>
 	<File sha1="d4911a6780f4f8cf2b30cd88565a801fa9563fef" name="Classes/ModList.lua" part="program"/>
@@ -38,9 +38,9 @@
 	<File sha1="9d91ef81ac4fd8d5a1e16be17bdf199545209d87" name="Classes/PopupDialog.lua" part="program"/>
 	<File sha1="86fee3127d9520144fc741f6fccc3c1d9f1aa532" name="Classes/ScrollBarControl.lua" part="program"/>
 	<File sha1="261dcf54a4542e6160fd7024d8edf4fc095d9c71" name="Classes/SectionControl.lua" part="program"/>
-	<File sha1="0296172fbd4634107766cf78b4ec428739942f37" name="Classes/SharedItemListControl.lua" part="program"/>
-	<File sha1="0d6551c10866549a2f808c5b11be05e2cfa70fe3" name="Classes/SkillListControl.lua" part="program"/>
-	<File sha1="a8bf069bb97a05c1d304f3aef44c29bcda4d3d99" name="Classes/SkillsTab.lua" part="program"/>
+	<File sha1="9f274cf24f62b64d1d63e569a9fe97e0a488575b" name="Classes/SharedItemListControl.lua" part="program"/>
+	<File sha1="20f92cc3415aaf5797f3cd84290ca609861eef99" name="Classes/SkillListControl.lua" part="program"/>
+	<File sha1="36fdc286e28cb6c0794b315bd527d887721521ea" name="Classes/SkillsTab.lua" part="program"/>
 	<File sha1="6317bd9ba391832dccafcb62409a5ce2988d1928" name="Classes/SliderControl.lua" part="program"/>
 	<File sha1="ada27b91a3c466689111429105edd4ee28ad0c3f" name="Classes/TextListControl.lua" part="program"/>
 	<File sha1="c5344a84f4a6ffbfe56b66fb95a3e24b53fcca43" name="Classes/TreeTab.lua" part="program"/>
